feat(eam): 验收入库功能增强
- 存放仓库改为可编辑 TreeSelect（不再默认），提交时必填校验
- 新增管理部门字段（TreeSelect 选择，批次级别，资产创建时优先使用）
- 验收弹窗新增采购形式展示（从采购订单明细读取，Tag 显示购买/租赁）
- 弹窗布局优化：存放仓库+管理部门移至配件清单上方
- 详情页同步展示存放仓库（含地址）、管理部门、采购形式
- 入庫批次列表：供应商多供应商显示+N 徽章（Popover 展开）
- 入庫批次列表：备注列 Tooltip 浮窗、移除更新人列和删除按钮
- 待验收订单：采购经办人改为员工搜索下拉、供应商改为下拉选择
- 待验收订单：新增完成采购时间列、无供应商筛选支持
- 详情頁批次信息改为每行3字段布局
- 统一「无供应商」显示（后端源頭修复 + 前端兼容）
- 数据库迁移：172 验收入库多结果分配列、173 批次管理部门字段
- schema-v13 自动迁移脚本